Lab Order Controller  (#11)
* Create skeleton for put route

* Add test skeleton for put route

* Add get route skeleton

* Test use cases

* Revert path prefix

* Add API docs

* Replace if statement with elvis op

* Adjust use case to use data layer

Remove extra use case call

Use ion() call in use case

Add api key header

Use basic auth header

* Test use case with business logic

* Add basic auth to controller test

* Connect use case to data layer

* Handle invalid UUIDs

* Remove unnecessary function
